# CANtankerous-fw

./: CMakeLists.txt  CMakePresets.json  LPC5514_flash.ld  arm-clang-toolchain.cmake  arm-gcc-toolchain.cmake  assert_impl.c  board.h  cantankerous-fw.c  cantankerous_fw.c  irq.c  linker.ld  lpc5514.cfg  startup.S  startup.c  system_LPC5514.c
board/: clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
middleware/usb/: README  middleware_usb_common_header_LPC55S16.cmake  middleware_usb_device_cdc_external_LPC55S16.cmake  middleware_usb_device_common_header_LPC55S16.cmake  middleware_usb_device_controller_driver_LPC55S16.cmake  middleware_usb_device_ip3511fs_LPC55S16.cmake  middleware_usb_device_ip3511hs_LPC55S16.cmake  middleware_usb_device_stack_external_LPC55S16.cmake  middleware_usb_host_audio_LPC55S16.cmake  middleware_usb_host_cdc_LPC55S16.cmake  middleware_usb_host_common_header_LPC55S16.cmake  middleware_usb_host_hid_LPC55S16.cmake  middleware_usb_host_ip3516hs_LPC55S16.cmake  middleware_usb_host_msd_LPC55S16.cmake  middleware_usb_host_ohci_LPC55S16.cmake  middleware_usb_host_phdc_LPC55S16.cmake  middleware_usb_host_printer_LPC55S16.cmake  middleware_usb_host_stack_LPC55S16.cmake  middleware_usb_phy_LPC55S16.cmake
middleware/usb/device/: usb_device_lpcip3511.h
middleware/usb/output/npw/device_config/ip3511fs/: usb_device_config.h
middleware/usb/output/npw/device_config/ip3511hs/: usb_device_config.h
middleware/usb/output/npw/host_config/ip3516hs/: usb_host_config.h
middleware/usb/output/npw/host_config/ohci/: usb_host_config.h
